--- a/berita.html
+++ b/berita.html
@@ -51,7 +51,7 @@
     </article>
 
     <article class="news-card">
-      <img src="../images/berita/berita3.jpg" alt="Berita 3">
+      <img src="images/berita/berita3.jpg" alt="Berita 3">
       <div class="news-content">
         <h2>Upaya Lestarikan Budaya, MTs di Kulon Progo Ini Pakai Bahasa Jawa Setiap Kamis Saat Belajar</h2>
         <span class="source">Sumber: kompas.com</span>
@@ -67,7 +67,7 @@
     </article>
 
     <article class="news-card">
-      <img src="../images/berita/berita4.jpg" alt="Berita 4">
+      <img src="images/berita/berita4.jpg" alt="Berita 4">
       <div class="news-content">
         <h2>Yura Yunita Melayang dan Naik Naga di Pagelaran Sabang Merauke 2025</h2>
         <span class="source">Sumber: kompas.com</span>
@@ -82,7 +82,7 @@
     </article>
 
     <article class="news-card">
-      <img src="../images/berita/berita5.jpeg" alt="Berita 5">
+      <img src="images/berita/berita5.jpeg" alt="Berita 5">
       <div class="news-content">
         <h2>Kukar Festival Budaya Nusantara 2025 resmi dibuka di Tenggarong</h2>
         <span class="source">Sumber: detik.com</span>
@@ -97,7 +97,7 @@
     </article>
 
     <article class="news-card">
-      <img src="../images/berita/berita6.jpg" alt="Berita 6">
+      <img src="images/berita/berita6.jpg" alt="Berita 6">
       <div class="news-content">
         <h2>Pawai Pembangunan dan Karnaval Budaya Nusantara di Samarinda</h2>
         <span class="source">Sumber: tempo.co</span>
@@ -151,5 +151,6 @@
   </footer>
 
 </body>
+
 
 </html>
