--- a/kebijakan.html
+++ b/kebijakan.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Kebijakan Privasi - Archipelore</title>
-  <link rel="stylesheet" href="../css/kebijakan.css">
+  <link rel="stylesheet" href="css/kebijakan.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
 
 
   <footer>
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <div class="footer">
       <div class="kontak">
         <h1>ARCHIPELORE</h1>
@@ -92,10 +92,10 @@
       <div class="ikuti">
         <h1>Ikuti Kami</h1>
         <ul>
-          <li><img src="../images/icon/facebook.png" alt="Facebook" /></li>
-          <li><img src="../images/icon/x.png" alt="X" /></li>
-          <li><img src="../images/icon/instagram.png" alt="Instagram" /></li>
-          <li><img src="../images/icon/linkedin.png" alt="LinkedIn" /></li>
+          <li><img src="images/icon/facebook.png" alt="Facebook" /></li>
+          <li><img src="images/icon/x.png" alt="X" /></li>
+          <li><img src="images/icon/instagram.png" alt="Instagram" /></li>
+          <li><img src="images/icon/linkedin.png" alt="LinkedIn" /></li>
         </ul>
       </div>
     </div>
@@ -106,5 +106,6 @@
   </footer>
 
 </body>
+
 
 </html>
