--- a/kontak.html
+++ b/kontak.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Hubungi Kami</title>
-  <link rel="stylesheet" href="../css/kontak.css">
+  <link rel="stylesheet" href="css/kontak.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
   </div>
 
   <footer>
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <div class="footer">
       <div class="kontak">
         <h1>ARCHIPELORE</h1>
@@ -78,10 +78,10 @@
       <div class="ikuti">
         <h1>Ikuti Kami</h1>
         <ul>
-          <li><img src="../images/icon/facebook.png" alt="Facebook" /></li>
-          <li><img src="../images/icon/x.png" alt="X" /></li>
-          <li><img src="../images/icon/instagram.png" alt="Instagram" /></li>
-          <li><img src="../images/icon/linkedin.png" alt="LinkedIn" /></li>
+          <li><img src="images/icon/facebook.png" alt="Facebook" /></li>
+          <li><img src="images/icon/x.png" alt="X" /></li>
+          <li><img src="images/icon/instagram.png" alt="Instagram" /></li>
+          <li><img src="images/icon/linkedin.png" alt="LinkedIn" /></li>
         </ul>
       </div>
     </div>
@@ -92,5 +92,6 @@
   </footer>
 
 </body>
+
 
 </html>
