--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jelajahi Nusantara</title>
-  <link rel="stylesheet" href="../css/main.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body>
@@ -69,7 +69,7 @@
 
 
   <footer>
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <div class="footer">
       <div class="kontak">
         <h1>ARCHIPELORE</h1>
@@ -93,10 +93,10 @@
       <div class="ikuti">
         <h1>Ikuti Kami</h1>
         <ul>
-          <li><img src="../images/icon/facebook.png" alt="Facebook" /></li>
-          <li><img src="../images/icon/x.png" alt="X" /></li>
-          <li><img src="../images/icon/instagram.png" alt="Instagram" /></li>
-          <li><img src="../images/icon/linkedin.png" alt="LinkedIn" /></li>
+          <li><img src="images/icon/facebook.png" alt="Facebook" /></li>
+          <li><img src="images/icon/x.png" alt="X" /></li>
+          <li><img src="images/icon/instagram.png" alt="Instagram" /></li>
+          <li><img src="images/icon/linkedin.png" alt="LinkedIn" /></li>
         </ul>
       </div>
     </div>
@@ -107,7 +107,8 @@
   </footer>
 
 
-  <script src="../js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
+
 
 </html>
