--- a/berita.html
+++ b/berita.html
@@ -113,7 +113,7 @@
   </section>
 
   <footer>
-    <link rel="stylesheet" href="../css/footer.css" />
+    <link rel="stylesheet" href="css/footer.css" />
     <div class="footer">
       <div class="kontak">
         <h1>ARCHIPELORE</h1>
@@ -137,10 +137,10 @@
       <div class="ikuti">
         <h1>Ikuti Kami</h1>
         <ul>
-          <li><img src="../images/icon/facebook.png" alt="Facebook" /></li>
-          <li><img src="../images/icon/x.png" alt="X" /></li>
-          <li><img src="../images/icon/instagram.png" alt="Instagram" /></li>
-          <li><img src="../images/icon/linkedin.png" alt="LinkedIn" /></li>
+          <li><img src="images/icon/facebook.png" alt="Facebook" /></li>
+          <li><img src="images/icon/x.png" alt="X" /></li>
+          <li><img src="images/icon/instagram.png" alt="Instagram" /></li>
+          <li><img src="images/icon/linkedin.png" alt="LinkedIn" /></li>
         </ul>
       </div>
     </div>
@@ -154,3 +154,4 @@
 
 
 </html>
+
