--- a/navbar.html
+++ b/navbar.html
@@ -4,15 +4,15 @@
 <head>
   <meta charset="UTF-8" />
   <title>Navbar</title>
-  <link rel="stylesheet" href="../css/navbar.css" />
-  <link rel="shortcut icon" href="../images/archipelorelogo.png">
+  <link rel="stylesheet" href="css/navbar.css" />
+  <link rel="shortcut icon" href="images/archipelorelogo.png">
 </head>
 
 <body>
   <nav class="navbar">
     <div class="navdiv">
       <div class="logo">
-        <img src="../images/icon/logoo.png" alt="Logo" />
+        <img src="images/icon/logoo.png" alt="Logo" />
       </div>
       <ul>
         <li class="navlink"><a href="main.html" target="content"><strong>Beranda</strong></a></li>
@@ -23,5 +23,6 @@
     </div>
   </nav>
 </body>
+
 
 </html>
