--- a/main.html
+++ b/main.html
@@ -57,6 +57,7 @@
       <span id="closeModal" class="close">&times;</span>
       <img id="image" src="" alt="" />
       <h3 id="title"></h3>
+      <p><strong>Wilayah:</strong> <span id="region"></span></p>
       <p><strong>Ibukota:</strong> <span id="capital"></span></p>
       <p><strong>Sejarah:</strong> <span id="history"></span></p>
       <p><strong>Budaya:</strong> <span id="culture"></span></p>
@@ -112,3 +113,4 @@
 
 
 </html>
+
