--- a/main.html
+++ b/main.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-  <section class="hero">
+  <section class="hero"
+    style="
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0)), url('images/tambahan/hero.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  ">
     <div class="overlay"></div>
     <div class="hero-box">
       <h1>Ayo, Jelajahi Nusantara</h1>
@@ -113,4 +119,5 @@
 
 
 </html>
+
 
