--- a/main.html
+++ b/main.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-  <section class="hero"
-    style="
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(0, 0, 0, 0)), url('images/tambahan/hero.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  ">
+  <section class="hero">
     <div class="overlay"></div>
     <div class="hero-box">
       <h1>Ayo, Jelajahi Nusantara</h1>
@@ -119,5 +113,6 @@
 
 
 </html>
+
 
 
